# SQLSymphony

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md
docs/en/: index.md
docs/ru/: article.md  index.md
examples/: main3.py  main4.py
sqlsymphony-orm/: README.md  format-code.py  main.py  main2.py  my.db  pyproject.toml  siKJBMXP
sqlsymphony-orm/examples/: main2.py  main5.py  main6.py
sqlsymphony-orm/migrations/: backup_20241025132124_example.db  backup_20241025132151_example.db  backup_20241025132200_example.db  backup_20241025132204_example.db  backup_20241025132209_example.db
sqlsymphony-orm/sqlsymphony_orm/: __init__.py  constants.py  exceptions.py  queries.py  query.py
sqlsymphony-orm/sqlsymphony_orm/async/: queries.py
sqlsymphony-orm/sqlsymphony_orm/async/database/: connection.py
sqlsymphony-orm/sqlsymphony_orm/async/models/: session_models.py
sqlsymphony-orm/sqlsymphony_orm/async/security/: hashing.py
sqlsymphony-orm/sqlsymphony_orm/async/utils/: auditing.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/: constants.py  patterns.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/database/: connection.py  manager.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/datatypes/: fields.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/migrations/: migrations_manager.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/models/: orm_models.py  session_models.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/performance/: cache.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/security/: hashing.py
sqlsymphony-orm/sqlsymphony_orm/asyncio/utils/: slugger.py
sqlsymphony-orm/sqlsymphony_orm/connections/: database.py
sqlsymphony-orm/sqlsymphony_orm/database/: connection.py  manager.py
sqlsymphony-orm/sqlsymphony_orm/datatypes/: base.py  fields.py
sqlsymphony-orm/sqlsymphony_orm/migrations/: migrations_manager.py
sqlsymphony-orm/sqlsymphony_orm/models/: base.py  orm_models.py  session_models.py
sqlsymphony-orm/sqlsymphony_orm/performance/: cache.py
sqlsymphony-orm/sqlsymphony_orm/security/: hashing.py
sqlsymphony-orm/sqlsymphony_orm/utils/: auditing.py  slugger.py
sqlsymphony-orm/tests/: sessions.py
sqlsymphony_orm/: README.md  format-code.py  pyproject.toml
sqlsymphony_orm/examples/: main.py  main2.py  main3.py  main4.py  main5.py
sqlsymphony_orm/sqlsymphony_orm/: __init__.py  constants.py  exceptions.py  patterns.py  queries.py
sqlsymphony_orm/sqlsymphony_orm/database/: connection.py  manager.py
sqlsymphony_orm/sqlsymphony_orm/datatypes/: fields.py
sqlsymphony_orm/sqlsymphony_orm/migrations/: migrations_manager.py
sqlsymphony_orm/sqlsymphony_orm/models/: orm_models.py  session_models.py
sqlsymphony_orm/sqlsymphony_orm/performance/: cache.py
sqlsymphony_orm/sqlsymphony_orm/security/: hashing.py
sqlsymphony_orm/sqlsymphony_orm/sqlsymphony-orm/sqlsymphony_orm/asyncio/database/: connection.py
sqlsymphony_orm/sqlsymphony_orm/sqlsymphony-orm/sqlsymphony_orm/asyncio/models/: session_models.py
sqlsymphony_orm/sqlsymphony_orm/sqlsymphony-orm/sqlsymphony_orm/models/: orm_models.py
sqlsymphony_orm/sqlsymphony_orm/sqlsymphony-orm/tests/: sessions.py
sqlsymphony_orm/sqlsymphony_orm/utils/: auditing.py  slugger.py
sqlsymphony_orm/tests/: sessions.py
