[tool.poetry]
name = "sqlsymphony-orm"
version = "0.2.8"
description = "The elegant and powerful SQLite3 ORM for Python"
authors = ["alexeev-prog <dev.alexeev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
ruff = "^0.6.9"
pycolor-palette-loguru = "^0.1.4"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
keywords = ["sqlsymphony", "OOP", "database", "sql", "sqlite", "ORM"]
license = {text = "GNU GPL v3"}

