[tool.poetry]
name = "sqlsymphony-orm"
version = "0.4.14"
description = "The elegant and powerful SQLite3 ORM for Python"
authors = ["alexeev-prog <dev.alexeev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.2"
ruff = "^0.6.9"
pycolor-palette-loguru = "^0.1.4"
loguru = "^0.7.2"
pydantic = "^2.9.2"
pytest = "^8.3.3"
click = "^8.1.7"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
keywords = ["sqlsymphony", "async", "async database", "async ORM", "aiosqlite", "OOP", "database", "sql", "sqlite", "ORM", "db", 'sqlite3', 'sqlalchemy', 'fast', 'simple']
license = {text = "GNU GPL v3"}
requires-python = ">=3.9"
dynamic = ["version"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py312"

[lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tabs"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

